/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
 */

package com.huawei.hicampus.claw.cron.store;

import java.io.IOException;
import java.nio.file.Files;
import java.nio.file.Path;
import java.util.ArrayList;
import java.util.List;
import java.util.Optional;
import java.util.concurrent.locks.ReentrantReadWriteLock;

import com.huawei.hicampus.claw.ai.utils.CampusClawHome;
import com.huawei.hicampus.claw.cron.model.CronJob;
import com.fasterxml.jackson.annotation.JsonInclude;
import com.fasterxml.jackson.databind.DeserializationFeature;
import com.fasterxml.jackson.databind.ObjectMapper;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Service;

/**
 * 以 JSON 文件保存当前 Cron Host 的任务定义。
 * 缺省路径为 {@code ~/.campusclaw/agent/cron/jobs.json}。
 *
 * @version [br_eCampusCore 26.0.0, 2026/05/06]
 * @since [br_eCampusCore 26.0.0]
 */
@Service
public class CronStore {

    private static final Logger log = LoggerFactory.getLogger(CronStore.class);

    private final ObjectMapper mapper;
    private final Path jobsFile;
    private final ReentrantReadWriteLock lock = new ReentrantReadWriteLock();

    @Autowired
    public CronStore() {
        this(defaultJobsPath());
    }

    public CronStore(Path jobsFile) {
        this.jobsFile = jobsFile;
        this.mapper = new ObjectMapper();
        this.mapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
        this.mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
    }

    public List<CronJob> load() {
        lock.readLock().lock();
        try {
            if (!Files.exists(jobsFile)) {
                return List.of();
            }
            var file = mapper.readValue(jobsFile.toFile(), JobsFile.class);
            return file.jobs() != null ? file.jobs() : List.of();
        } catch (IOException e) {
            log.warn("Failed to load cron jobs from {}", jobsFile, e);
            return List.of();
        } finally {
            lock.readLock().unlock();
        }
    }

    public void save(List<CronJob> jobs) {
        lock.writeLock().lock();
        try {
            Files.createDirectories(jobsFile.getParent());
            mapper.writerWithDefaultPrettyPrinter().writeValue(jobsFile.toFile(), new JobsFile(1, jobs));
        } catch (IOException e) {
            log.error("Failed to save cron jobs to {}", jobsFile, e);
        } finally {
            lock.writeLock().unlock();
        }
    }

    public CronJob addJob(CronJob job) {
        lock.writeLock().lock();
        try {
            var jobs = new ArrayList<>(loadUnsafe());
            jobs.add(job);
            saveUnsafe(jobs);
            return job;
        } finally {
            lock.writeLock().unlock();
        }
    }

    public boolean removeJob(String jobId) {
        lock.writeLock().lock();
        try {
            var jobs = new ArrayList<>(loadUnsafe());
            boolean removed = jobs.removeIf(j -> j.id().equals(jobId));
            if (removed) {
                saveUnsafe(jobs);
            }
            return removed;
        } finally {
            lock.writeLock().unlock();
        }
    }

    public Optional<CronJob> getJob(String jobId) {
        return load().stream().filter(j -> j.id().equals(jobId)).findFirst();
    }

    public void updateJob(CronJob updated) {
        lock.writeLock().lock();
        try {
            var jobs = new ArrayList<>(loadUnsafe());
            for (int i = 0; i < jobs.size(); i++) {
                if (jobs.get(i).id().equals(updated.id())) {
                    jobs.set(i, updated);
                    break;
                }
            }
            saveUnsafe(jobs);
        } finally {
            lock.writeLock().unlock();
        }
    }

    private List<CronJob> loadUnsafe() {
        try {
            if (!Files.exists(jobsFile)) {
                return List.of();
            }
            var file = mapper.readValue(jobsFile.toFile(), JobsFile.class);
            return file.jobs() != null ? file.jobs() : List.of();
        } catch (IOException e) {
            log.warn("Failed to load cron jobs", e);
            return List.of();
        }
    }

    private void saveUnsafe(List<CronJob> jobs) {
        try {
            Files.createDirectories(jobsFile.getParent());
            mapper.writerWithDefaultPrettyPrinter().writeValue(jobsFile.toFile(), new JobsFile(1, jobs));
        } catch (IOException e) {
            log.error("Failed to save cron jobs", e);
        }
    }

    private static Path defaultJobsPath() {
        return CampusClawHome.agentDir().resolve("cron").resolve("jobs.json");
    }

    record JobsFile(int version, List<CronJob> jobs) {}
}
